--- a/src/index.css
+++ b/src/index.css
@@ -26,3 +26,19 @@ body.dark {
   background-color: black;
   color: white;
 }
+
+@media (max-width: 768px) {
+  .search-bar {
+      position: fixed;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-color: white;
+      padding: 1em;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+  }
+}
